--- a/Orange_Market.UI/appsettings.Development.json
+++ b/Orange_Market.UI/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=GABRIEL-G3\\SQLEXPRESS;Initial Catalog=range_Market;Integrated Security=True",
+    "DefaultConnection": "Data Source=GABRIEL-G3\\SQLEXPRESS;Initial Catalog=Orange_Market;Integrated Security=True",
     "Logging": {
       "LogLevel": {
         "Default": "Information",
