--- a/Orange_Market.UI/appsettings.json
+++ b/Orange_Market.UI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=VANESSA;Initial Catalog=Taller;Integrated Security=True"
+    "DefaultConnection": "Data Source=GABRIEL-G3\\SQLEXPRESS;Initial Catalog=Orange_Market;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
